fix z-index on search page input btn

--- a/src/components/Molecules/SearchBar/SearchBar.module.scss
+++ b/src/components/Molecules/SearchBar/SearchBar.module.scss
@@ -7,6 +7,10 @@
   border-radius: 1rem;
 }
 
+.search-btn {
+  z-index: 1 !important;
+}
+
 .search-results {
   position: absolute;
   top: 100%;
